--- a/static/survey/css/survey-index.css
+++ b/static/survey/css/survey-index.css
@@ -7,10 +7,10 @@
 }
 
 .modal-header {
-    background-color: #337AB7;
+    background-color: #5236ab;
     padding: 16px;
     color: #FFF;
-    border-bottom: 1px dashed #337AB7;
+    border-bottom: 1px dashed #5236ab;
 }
 
 #resume-code-input {
