--- a/templates/parts/footer_part.html
+++ b/templates/parts/footer_part.html
@@ -2,20 +2,13 @@
 <div class="d-flex justify-content-between">
     <ul class="nav flex-column flex-sm-row">
         <li class="nav-item">
-            <a class="nav-link" href="https://nc3.lu" target="_blank" rel="noopener noreferrer">
-                <img class="img-fluid" src="{% static 'images/logo-nc3.png' %}" width="32px"
-                     title="{{ _('A service provided by NC3-LU') }}"
-                     alt="{{ _('A service provided by NC3-LU') }}"/>
+            <a class="nav-link" href="https://www.cgi.com/en/cybersecurity" target="_blank" rel="noopener noreferrer">
+                <img class="img-fluid" src="{% static 'images/CGI_logo_white.png' %}" width="32px"
+                     title="{{ _('A service provided by CGI') }}"
+                     alt="{{ _('A service provided by CGI') }}"/>
             </a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="https://github.com/NC3-LU/Fit4Cybersecurity" target="_blank"
-               rel="noopener noreferrer">
-                <img class="img-fluid" src="{% static 'images/github-9-512.png' %}" width="32px"
-                     title="{{ _('Source code on GitHub') }}"
-                     alt="{{ _('Source code on GitHub') }}"/>
-            </a>
-        </li>
+
         <li class="nav-item">
             <a class="nav-link" href="{{ version_url }}" title="{{ _('Version of') }} {{ custom.tool_name }}"
                alt="{{ _('Version of') }} {{ custom.tool_name }}" target="_blank" rel="noopener noreferrer">
@@ -32,7 +25,7 @@
                alt="{{ _('Terms of Service') }}">Terms</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="https://lhc.lu" target="_blank" rel="noopener noreferrer">Copyright {% now "Y" %} Luxembourg House of Cybersecurity</a>
+            <a class="nav-link" href="https://www.cgi.com/en/cybersecurity" target="_blank" rel="noopener noreferrer">Copyright {% now "Y" %} CGI Cybersecurity</a>
         </li>
     </ul>
 </div>
