--- a/templates/survey/requestDiagnosticLink.html
+++ b/templates/survey/requestDiagnosticLink.html
@@ -6,7 +6,7 @@ data-subject="{{ _('Request diagnostic') }}"
 style="white-space: normal;"
 data-body="{% blocktranslate with userId=userId %}Dear Cases Team,
 
-We would like to request a Diagnostic NC3 from you.
+We would like to request a Diagnostic CGI from you.
 
 Here is our evaluation results identifier: {{ userId }}
 
@@ -15,7 +15,7 @@ Here also additional information that could be useful:
 Lastname of the contact:
 Firstname of the contact:
 Email address of the contact:
-Address of the company for the Diagnostic (Luxembourg only):
+Address of the company for the Diagnostic (CGI only):
 Desired language for the Diagnostic:
 {% endblocktranslate %}"
 href="#"
