--- a/templates/emails/send_report.html
+++ b/templates/emails/send_report.html
@@ -3,4 +3,4 @@
 <p>You will find attached your personalized {{ tool_name }} report.</p>
 
 <p>With kind regards,<p>
-<p>The <a href="https://nc3.lu">NC3</a> team<p>
+<p>The <a href="https://www.cgi.com/en/cybersecurity">CGI</a> team<p>
