--- a/templates/survey/base.html
+++ b/templates/survey/base.html
@@ -5,7 +5,7 @@
 {% load static %}
 
 {% block bootstrap4_extra_head %}
-<meta name="description" content="{{ custom.tool_name }} by NC3-LU" />
+<meta name="description" content="{{ custom.tool_name }} by CGI" />
 <link rel="stylesheet" type="text/css" href="{% static custom.survey_css %}" />
 <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}" />
 <link rel="apple-touch-icon" sizes="152x152" href="{% static 'images/apple-touch-icon.png' %}" />
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block title %}
-{{ custom.tool_name }} {{ _('a NC3 self-assessment tool!') }}
+{{ custom.tool_name }} {{ _('a CGI self-assessment tool!') }}
 {% endblock %}
 
 {% block bootstrap4_content %}
